src/test/deca/context/invalid/created/wrongTypes/methodsCall/method_BOOLEAN_e_FLOAT_g.deca
// Description:
//      Appel d'une methode qui attend un parametre BOOLEAN avec un FLOAT
// Resultats:
//      Erreur contexte Ligne 12 : Contextual error, the parameters given don't respect the method signature

class A {
    void f(boolean x){}
}

{
    A a = new A();
    a.f(3.8);
}